# iglo

./: Cargo.toml  Dockerfile  README.md  config.yml  target_min_max.npy  trained_model.ot
.github/workflows/: docker.yml
benches/: search_benchmark.rs
src/: lib.rs
src/chess/: bitboard.rs  board.rs  chess_move.rs  mod.rs  move_generator.rs  perft.rs  square.rs  zobrist_hash.rs
src/chess/lookup_gens/: main.rs
src/engine/: bitboard.rs  board.rs  board_eval.rs  bot.rs  chess_move.rs  main.rs  mod.rs  move_generator.rs  move_ordering.rs  search.rs  square.rs  time_control.rs  transposition_table.rs  uci.rs
src/engine/bots/: mod.rs  nply_bot.rs  nplytranspo_bot.rs  oneply_bot.rs  random_bot.rs
src/engine/lookup_gens/: king_gen.py  knight_gen.py  main.rs
src/engine/neval/: build_dataset.rs  network.rs  pred.rs  train.py  train.rs
src/engine/opening/: build_opening_book.rs  mod.rs  opening_book.rs  pgn_to_uci.py  polyglot.rs
src/ui/: main.rs
