[package]
name = "iglo"
version = "0.1.0"
edition = "2021"
authors = ["Fabian Blatz"]

[profile.release]
lto=true
overflow-checks=false

[dependencies]
rand = "0.8.5"
lerp = "0.5.0"
serde = "1.0.193"
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
iter-progress = "0.8.0"

[dev-dependencies.sdl2]
sdl2 = "0.36.0"
default-features = false
features = ["image", "ttf", "mixer"]

[lib]
name = "iglo"
path = "src/lib.rs"

[[example]]        
name = "iglo_ui"
path = "src/ui/main.rs"

[[example]]
name = "lookup_gen"
path = "src/chess/lookup_gens/main.rs"

[[example]]
name = "iglo"
path = "src/engine/main.rs"

[[example]]
name = "build_book"
path = "src/engine/opening/build_opening_book.rs"

[[bench]]
name = "search_benchmark"
harness = false

