[package]
name = "iglo"
version = "0.1.0"
edition = "2021"
authors = ["Fabian Blatz"]

[profile.release]
opt-level = 3
lto = true # Enable Link Time Optimization for better cross-module optimization.
codegen-units = 1 # Reduce the number of codegen units for better optimization at the cost of compile time.
overflow-checks = false # Disable overflow checks in release builds for better performance.
panic = "abort" # Reduce binary size by aborting on panic instead of unwinding.


[dependencies]
rand = "0.8.5"
lerp = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
iter-progress = "0.8.0"
sdl2 = { version = "0.36.0", default-features = false, features = ["image", "ttf", "mixer"] }

[lib]
name = "iglo"
path = "src/lib.rs"

[[example]]        
name = "iglo_ui"
path = "src/ui/main.rs"

[[example]]
name = "lookup_gen"
path = "src/chess/lookup_gens/main.rs"

[[example]]
name = "iglo"
path = "src/engine/main.rs"

[[bench]]
name = "search_benchmark"
harness = false

